terraform/k8s/modules/containers/errbot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: errbot
  name: errbot
  labels:
    name: errbot
spec:
  replicas: 1
  selector:
    matchLabels:
      name: errbot
  template:
    metadata:
      labels:
        name: errbot
    spec:
      labels:
        name: errbot
      containers:
        - name: errbot
          image: ${ACR_NAME}.azurecr.io/errbot:${IMAGE_TAG}
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "2.0"
              memory: "8Gi"
            requests:
              cpu: "1.0"
              memory: "400Mi"
